java 버전 차이로 인한 메소드 수정